test/functions/resolution/errors/testBadCallCandidates.4-all.good
testBadCallCandidates.chpl:71: In function 'main':
testBadCallCandidates.chpl:85: error: unresolved call 'owned C.bar(42)'
testBadCallCandidates.chpl:8: note: this candidate did not match: C.bar(x: string)
testBadCallCandidates.chpl:85: note: because actual argument #1 with type 'int(64)'
testBadCallCandidates.chpl:8: note: is passed to formal 'x: string'
testBadCallCandidates.chpl:85: note: other candidates are:
testBadCallCandidates.chpl:11: note:   C.bar(x: D)
testBadCallCandidates.chpl:36: note:   D.bar(x: int)
testBadCallCandidates.chpl:65: note:   bar(x: D)
